--- a/style.css
+++ b/style.css
@@ -1,59 +1,64 @@
-        body{
-            color: goldenrod;
-            background-color: black;
-            text-align: center; 
-        }
-
-        #foto-perfil{
-            border-radius: 100%;            
-        }
-
-        ul{
+        .barra ul{
             list-style-type: none;
-            margin: 0;
-            padding: 0;
+            color: goldenrod;
+            font-size: 25px;
+            font-weight: 400;
+            background-color: blue;
+            margin: 0px;
+            border: 0px;
             overflow: hidden;
         }
-
-        h1, h2{
-            color:gold;
-            font-size: 45px;
+        .barra li a {
+            display: inline-block;
+            padding: 20px 13px;
+            font-weight: 100;
         }
-
+        .barra li {
+            float: left;
+        }
         a:link {
             text-decoration: none;
-        }
-           
+        }      
         a:hover {
             text-decoration: none;
         }
-
-        li {
-            float: left;
-        }
-
-        li a {
-            display: block;
-            text-align: center;
-            background-color:gold;
-            padding: 14px 16px;
-            text-decoration: none;
-            font-weight: 700;
-            color: white;
-          }
-
         a{
             color:goldenrod;
         }
-
         .active {
-            background-color: orange;
+            background-color: gold;
          }
-
-         ul {
-            position: fixed;
-            top: 0;
-            width: 100%;
-          }
+         .foto img{
+             background-color: goldenrod;
+             border-radius: 100%;
+             width: 420px;
+             float: left;
+             padding: 1px;
+        }
+        .meunome{
+            text-align: center;
+            font-size: 30px;
+            font-style: italic;
+            color: goldenrod;
+        }
+        .sobre{
+            font-size: 25px;
+            text-align: justify;
+            color: goldenrod;
+        }
+        .skills{
+            text-align: center;
+            font-size: 25px;
+            color: goldenrod;
+        }
+        .skills ul {
+            top: 30;
+            list-style-type: none;
+         }
+         .contato{
+            color: goldenrod;
+            font-size: 25px;
+            text-align: center;
+         }
 
 
