--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@
             font-size: 25px;
             font-weight: 400;
             background-color: blue;
-            margin: 0px;
+            margin-left: -10px;
+            margin-right: 10px;
+            margin: -10px;
             border: 0px;
             overflow: hidden;
         }
